<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTwo" >

    <ImageView
        android:id="@+id/fragmenttwobg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/stepfour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_4_select_dining_method"
        app:layout_constraintTop_toBottomOf="@id/fragmenttwobg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageViewstepfour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/restaurant_icon"
        app:layout_constraintLeft_toRightOf="@id/stepfour"
        app:layout_constraintTop_toBottomOf="@id/fragmenttwobg"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"/>

    <View
        android:id="@+id/dividertop"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/stepfour"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:id="@+id/stepfourradiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dividertop"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButtondinein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dine_in"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButtontakeaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_away"
            android:layout_marginHorizontal="35dp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButtonhomedel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_delivery"
            android:textStyle="bold"/>
    </RadioGroup>

    <View
        android:id="@+id/dividerdown"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/stepfourradiogroup"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/textViewyourorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order"
        app:layout_constraintTop_toBottomOf="@id/dividerdown"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textViewOrderMains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        app:layout_constraintTop_toBottomOf="@id/textViewyourorder"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewOrderSides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side"
        app:layout_constraintTop_toBottomOf="@id/textViewOrderMains"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewOrderBevrages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bevrages"
        app:layout_constraintTop_toBottomOf="@id/textViewOrderSides"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewOrderDining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dining_method"
        app:layout_constraintTop_toBottomOf="@id/textViewOrderBevrages"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewtotalrm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm_0_00"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOrderDining"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Red"/>

    <Button
        android:id="@+id/buttonclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_form"
        app:layout_constraintTop_toBottomOf="@id/textViewtotalrm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>